# learning_gen_ai

./: .gitignore
00_closed_source_hosted_models/02_voice_agent_mvp/src/app/: logging_conf.py
00_closed_source_hosted_models/02_voice_agent_mvp/src/app/audio/: audio_utils.py
00_closed_source_hosted_models/02_voice_agent_mvp/src/app/simulator/: call_simulator.py
00_closed_source_hosted_models/02_voice_agent_mvp/src/app/sip/: sip_proxy.py
04_llm/01_projects/02_rag_mistral/chat_backend/src/app/rag_chatbot_pipeline/data_handler/: data_operations.py  raw_pdfs.py
04_llm/01_projects/03_voice_agent_mvp/: pyproject.toml  settings.json
04_llm/01_projects/03_voice_agent_mvp/src/app/: aiortc_debug.py  config.py  main.py  openai_ws_bridge.py  rtp_receiver.py  test_openai_stream.py
04_llm/01_projects/03_voice_agent_mvp/src/app/audio/: audio_ingest.py
04_llm/01_projects/03_voice_agent_mvp/src/app/sip/: rtp.py  sip_events.py
